Hit button function added
Added: function to generate random cards and display in the table with swish sound on clicking hit button and clearing all the card images after clicking deal button.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,20 @@
             <div>
                  <button class="btn-lg btn-primary mr-2" id="blackjack-hit-btn">Hit</button> <button class="btn-lg btn-warning mr-2" id="blackjack-Stand-btn">Stand</button> <button class="btn-lg btn-danger" id="blackjack-deal-btn">Deal</button>
             </div>
+            <div>
+                <table>
+                    <tr>
+                        <th>Wins</th>
+                        <th>Losses</th>
+                        <th>Draws</th>
+                    </tr>
+                    <tr>
+                        <td><span id="wins">0</span></td>
+                        <td><span id="losses">0</span></td>
+                        <td><span id="draws">0</span></td>
+                    </tr>
+                </table>
+            </div>
         </div>
         <div class="flex-blackjack-row-5" id="flex-cat-gen">
             <table>
