Basic game logic and result display added

--- a/index-2.html
+++ b/index-2.html
@@ -49,6 +49,10 @@
                 </table>
             </div>
 
+            <div id="result-div">
+                <h2><span id="result"></span></h2>
+            </div>
+
             <div>
                 <button class="btn-lg btn-primary mr-2" id="blackjack-hit-btn" onclick="blackjackHit()">Hit</button>
                 <button class="btn-lg btn-warning mr-2" id="blackjack-Stand-btn" onclick="blackjackStand()">Stand</button>
