--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
 </head>
 
 <body>
-    
+
     <div class="container-1" id="container-1">
         <div class="landing-page" id="landing-page">
             <img src="static/images/ui/poster.jpeg" alt="">
-            <button class="btn btn-outline-primary" onclick="window.location.href='/index-2.html'">Lets Play</button>
+            <button class="btn btn-outline-primary" onclick="window.location.href='index-2.html'">Lets Play</button>
         </div>
     </div>
 
     <script src=" static/script.js"></script>
 
 </body>
+
 </html>
