--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="static/style.css">
     <title>BlackJack</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="static/images/ui/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="static/images/ui/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="static/images/ui/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="static/images/ui/favicon_io/site.webmanifest">
 </head>
 
 <body>
